Revision history for Perl module Text::Autoformat

1.67 2015-01-08 NEILB
    - Got co-maint from Damian so I could put the dist on github.
      Thanks Damian!
    - Reformatted this file as per CPAN::Changes::Spec

1.669006 2014-10-03 DCONWAY
    - Improved 'quoter' option to allow augmenting quoter regex,
      rather than just replacing it (thanks Peter)

1.669005 2014-10-03 DCONWAY
    - Added Lisp-style leading ; as a quoter (thanks Roland)
    - Added 'quoter' option to allow user to specify a regex
      to be used to recognize quoters (thanks Peter)

1.669004 2013-07-31 DCONWAY
    - Tweaked widow handling to avoid a nasty edge case (thanks Michael!)

1.669003 2013-05-13 DCONWAY
    - Unknown changes

1.669002 2010-06-22 DCONWAY
    - Patched missing case in 'ignore' option handling (thanks Alan)

1.669001 2010-05-30 DCONWAY
    - Added major improvements to the 'ignore' option (thanks Dan!)

1.668001 2010-04-03 DCONWAY
    - Removed spurious debugging statement in bad Pod. (Thanks Chris)

1.666.0 2009-04-16 DCONWAY
    - No changes logged

1.14.0 2007-09-29 DCONWAY
    - Fixed bug in handling empty mail messages
    - Fixed bug in handling sig delimiters
    - Fixed bug in paragraph ignoring code (thanks Rob)
    - Fixed bug in handling whitespace-only input (thanks Ed)
    - Fixed bug in Roman numerals (thanks Suresh)
    - Fixed overeager autocentering (thanks Suresh)
    - Enhanced 'lists' option to allow only specific types of lists
      to be recognized (thanks Rob)
    - Fixed bug in numbered hangs (thanks Rob)
    - Fixed bug in Roman numeraled hangs (thanks Rob)
    - Fixed misidentification of 8:20-style times as leading numbers (thanks
      Rob)
    - Fixed sentence mode (thanks Eric)
    - Changed licence to "same terms as Perl itself" to improve Fedora
      compatibility

1.13 2005-05-04 DCONWAY
    - Added sample config files for emacs and vim
    - Extended allows "Name>" quoters to "Name_1>" (thanks Simon)